--- a/popup.css
+++ b/popup.css
@@ -18,10 +18,24 @@ body#popupBody {
     align-items: center;
     text-align: center;
     justify-items: center;
-
+    width: 200px;
     /* Default light mode */
     background-color: var(--bg-light);
     color: var(--text-light);
+}
+
+#customizationsForm {
+    color: var(--text-light);
+    text-align: left;
+    display: flex;
+    font-size: 1rem;
+    flex-direction: column;
+    /* align-items: left; */
+    align-items: center;
+}
+
+#customizationsForm label{
+    width: 100%;
 }
 
 h4 {
@@ -42,7 +56,6 @@ button {
     /* Button text matches theme */
     border: none;
     cursor: pointer;
-
     font-size: 0.90rem;
 }
 
@@ -64,5 +77,9 @@ button:hover {
 
     button:hover {
         background-color: var(--button-hover-dark);
+    }
+
+    #customizationsForm {
+        color: var(--text-dark);
     }
 }
